# two_queues

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
examples/: string_consumer.cpp  string_generator.cpp
include/: data_consumer.hpp  queues_processor.hpp  requests_system.hpp
src/: data_consumer.hpp  data_producer.hpp
src/pch/: pch.hpp
src/test/: string_consumer.cpp  string_generator.cpp
